--- a/css/main.css
+++ b/css/main.css
@@ -3,3 +3,25 @@
   width:80%;
   left:10%;
 }
+
+.head-title{
+  position:relative;
+  left:10%;
+}
+
+.content{
+  position:relative;
+  width:80%;
+  left:10%;
+}
+
+.bio-img{
+  position:relative;
+  width:500px;
+}
+
+.video{
+  position:relative;
+  width:500px;
+  height:300px;
+}
